Fix unused variable

--- a/ze/zeinterval_callbacks.cpp.erb
+++ b/ze/zeinterval_callbacks.cpp.erb
@@ -583,6 +583,7 @@ void init_zeinterval_callbacks(struct zeinterval_dispatch *ze_dispatch) {
 void finalize_zeinterval_callbacks(zeinterval_message_iterator *interval_dispatch_iter) {
      zeinterval_callbacks_state* state = (zeinterval_callbacks_state*)  interval_dispatch_iter->callbacks_state;
      for (auto const &[function_name, ts] : state->host_start) {
+          (void) ts;
           const auto [hostname,process_id, thread_id, f ] = function_name;
           std::cerr << "THAPI::Warning: " << hostname
                     << " PID " << process_id
