--- a/omp/ompinterval_callbacks.cpp.erb
+++ b/omp/ompinterval_callbacks.cpp.erb
@@ -124,6 +124,19 @@ static void ompinterval_<%= dbt_event.name %>_callback(
                                      start_g, ns_from_origin-start_g, 0);
 
      }
+    <%elsif dbt_event.name_striped == "ompt_callback_target_submit_intel" %>
+     const char* _name = "<%= dbt_event.name_striped.gsub(/_callback/,'') %>";
+     auto* state = (ompinterval_callbacks_state*) ompinterval_iter_g->callbacks_state;
+     if (endpoint == ompt_scope_begin) {
+        state->host_start[hpt_function_name_t(hostname,process_id, thread_id, _name)] = ns_from_origin;
+     } else if (endpoint == ompt_scope_end) {
+        auto it_start = state->host_start.find(hpt_function_name_t(hostname,process_id, thread_id, _name));
+        const uint64_t start_g = it_start->second;
+        state->host_start.erase(it_start);
+        create_and_enqueue_host_message(hostname.c_str(), process_id, thread_id, _name,
+                                     start_g, ns_from_origin-start_g, 0);
+
+     }
     <%elsif dbt_event.name_striped == "ompt_callback_target_data_op_intel" %>
      const char* _name = <%= dbt_event.name_striped %>_name(<%= dbt_event.enum_name %>);
      auto* state = (ompinterval_callbacks_state*) ompinterval_iter_g->callbacks_state;
